# EtwScope

./: .gitignore  README.md  Whitepaper.md  build_exe.bat  etwscope-python.spec  main.py  poc_injector.c  requirements.txt  run_analyze.bat  run_experiments.bat  tb_inject_hwbp.c
analysis/: __init__.py  detector.py  diff_engine.py  engine.py  exporter.py  metrics.py  orchestrator.py  trs.py
backend/: Cargo.toml
backend/src/: etw.rs  main.rs  parser.rs  stream.rs
frontend/: __init__.py  app.py  widgets.py
rules/: suspicious_injection.yaml
